[tool.poetry]
name = "repl_python3_pokemeow-auto"
version = "0.1.0"
description = ""
authors = ["marzuz132 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
playsound = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
